# froide-exam

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py
froide_exam/: __init__.py  admin.py  api_views.py  apps.py  cms_apps.py  cms_plugins.py  listeners.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
froide_exam/locale/de/LC_MESSAGES/: django.po
froide_exam/management/commands/: export_exams.py  import_exams.py
froide_exam/migrations/: 0001_initial.py  0002_auto_20181217_1220.py  0003_auto_20181219_1154.py  0004_auto_20181219_1157.py  0005_curriculum_legal_status.py  0006_auto_20190208_1153.py  0007_auto_20190208_1158.py  0008_remove_curriculum_jurisdiction.py  0009_curriculum_slug.py  0010_auto_20201119_1718.py  0010_auto_20201218_1316.py  0011_add_states.py  0011_auto_20201207_1416.py  0011_auto_20201218_1323.py  0011_state_model.py  0012_populate_states.py  0013_allow_blank_juris.py  0013_migrate_to_states.py  0013_remove_curriculum_fields.py  0014_require_curriculum_slug.py  0015_privatecopy.py  0016_remove_legacy_fields.py  0017_alter_state_legal_status.py  0017_examrequest_documents.py
froide_exam/templates/froide_exam/: base.html  curriculum.html  index.html  jurisdiction.html  request_private_copy.html  sent.html  state.html  state_year_tag.html  state_years.html  view_private_copy.html
frontend/javascript/: curriculum.js
frontend/styles/: curriculum.scss
locale/de/LC_MESSAGES/: django.po
(+1 files in other folders)
